; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_bfin_5xx.c_bfin_serial_break_ctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_bfin_5xx.c_bfin_serial_break_ctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i32 }
%struct.bfin_serial_port = type { i32 }

@SB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_port*, i32)* @bfin_serial_break_ctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfin_serial_break_ctl(%struct.uart_port* %0, i32 %1) #0 {
  %3 = alloca %struct.uart_port*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bfin_serial_port*, align 8
  %6 = alloca i32, align 4
  store %struct.uart_port* %0, %struct.uart_port** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.uart_port*, %struct.uart_port** %3, align 8
  %8 = bitcast %struct.uart_port* %7 to %struct.bfin_serial_port*
  store %struct.bfin_serial_port* %8, %struct.bfin_serial_port** %5, align 8
  %9 = load %struct.bfin_serial_port*, %struct.bfin_serial_port** %5, align 8
  %10 = call i32 @UART_GET_LCR(%struct.bfin_serial_port* %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i32, i32* @SB, align 4
  %15 = load i32, i32* %6, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %6, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load i32, i32* @SB, align 4
  %19 = xor i32 %18, -1
  %20 = load i32, i32* %6, align 4
  %21 = and i32 %20, %19
  store i32 %21, i32* %6, align 4
  br label %22

22:                                               ; preds = %17, %13
  %23 = load %struct.bfin_serial_port*, %struct.bfin_serial_port** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @UART_PUT_LCR(%struct.bfin_serial_port* %23, i32 %24)
  %26 = call i32 (...) @SSYNC()
  ret void
}

declare dso_local i32 @UART_GET_LCR(%struct.bfin_serial_port*) #1

declare dso_local i32 @UART_PUT_LCR(%struct.bfin_serial_port*, i32) #1

declare dso_local i32 @SSYNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
